--- a/job-crawler/src/main/java/com/mse/oop/crawler/gui/Dialog.fxml
+++ b/job-crawler/src/main/java/com/mse/oop/crawler/gui/Dialog.fxml
@@ -1,54 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="127.4" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="327.2" minHeight="10.0" prefHeight="327.2" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="75.40000000000003" minHeight="10.0" prefHeight="21.400000000000034" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <GridPane GridPane.rowIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="152.60000762939453" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.00001525878906" minWidth="10.0" prefWidth="426.1999923706054" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mse.oop.crawler.gui.DialogController">
+   <children>  
+               <GridPane>
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />                   
+                       </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints maxHeight="20" minHeight="0.0" prefHeight="20" vgrow="NEVER" />
+                   <RowConstraints fillHeight="false" maxHeight="717.0" minHeight="10.0" prefHeight="712.0" valignment="TOP" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="75.40000000000003" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+                  <children>
+                     <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                       <columnConstraints>
+                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" />
+                       </columnConstraints>
+                       <rowConstraints>                            
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />                           
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                       </rowConstraints>
+                        <children>
+                           <Label contentDisplay="RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="286.0" text="name" textAlignment="RIGHT" GridPane.rowIndex="1">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="siteName" maxHeight="-Infinity" prefHeight="50.0" prefWidth="489.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                           
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector location" textAlignment="RIGHT" GridPane.rowIndex="2">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="selectorRefNumber" maxHeight="-Infinity" prefHeight="50.0" prefWidth="489.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+                           
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector location" textAlignment="RIGHT" GridPane.rowIndex="3">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="selectorLocation" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS" />
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector position" textAlignment="RIGHT" GridPane.rowIndex="4">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="selectorPosition" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS" />
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector salary" textAlignment="RIGHT" GridPane.rowIndex="5">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="selectorSalary" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS" />
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector job description" textAlignment="RIGHT" GridPane.rowIndex="6">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextArea fx:id="selectorJobDescription" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS" />
+                        </children>                    
+                        <GridPane.margin>
+                           <Insets left="5.0" />
+                        </GridPane.margin>
+                     </GridPane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="selector RefNumber" textAlignment="RIGHT" GridPane.rowIndex="1">
-                     <padding>
-                        <Insets left="5.0" />
-                     </padding>
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btnDialogOk" layoutX="680.0" layoutY="5.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefWidth="100.0" text="save" />
+                  <Button fx:id="btnDialogCancel" layoutX="574.0" layoutY="5.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefWidth="100.0" text="cancel" />
                </children>
-            </GridPane>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </GridPane>
-   </center>
-</BorderPane>
+            </Pane>
+                  </children>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </padding>
+               </GridPane>
+   </children>
+        
+      </StackPane>
