--- a/job-crawler/src/main/java/com/mse/oop/crawler/gui/Dialog.fxml
+++ b/job-crawler/src/main/java/com/mse/oop/crawler/gui/Dialog.fxml
@@ -13,14 +13,14 @@
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />                   
                        </columnConstraints>
                  <rowConstraints>
-                   <RowConstraints maxHeight="20" minHeight="0.0" prefHeight="20" vgrow="NEVER" />
-                   <RowConstraints fillHeight="false" maxHeight="717.0" minHeight="10.0" prefHeight="712.0" valignment="TOP" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="75.40000000000003" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="20.0" minHeight="0.0" prefHeight="20.0" vgrow="NEVER" />
+                   <RowConstraints fillHeight="false" maxHeight="717.0" minHeight="10.0" prefHeight="537.0" valignment="TOP" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="75.40000000000003" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
                      <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                        <columnConstraints>
-                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                          <ColumnConstraints hgrow="SOMETIMES" />
                        </columnConstraints>
                        <rowConstraints>                            
@@ -32,6 +32,8 @@
                            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
                            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
                            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="52.0" vgrow="NEVER" />
+                  <RowConstraints />
                        </rowConstraints>
                         <children>
                            <Label contentDisplay="RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="286.0" text="name" textAlignment="RIGHT" GridPane.rowIndex="1">
@@ -72,6 +74,22 @@
                               </font>
                            </Label>
                            <TextArea fx:id="selectorJobDescription" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS" />
+                          
+                          
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="timeout settings" textAlignment="RIGHT" GridPane.rowIndex="7">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <ComboBox fx:id="comboTimeout" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                           
+                           <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="limit of download items" textAlignment="RIGHT" GridPane.rowIndex="8">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <TextField fx:id="positionLimit" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                           
                         </children>                    
                         <GridPane.margin>
                            <Insets left="5.0" />
